# QCborStreamExample

./: .gitignore  CMakeLists.txt  HubButton.qml  README.md  connectionManager.cpp  connectionManager.h  device.cpp  device.h  deviceManager.cpp  deviceManager.h  deviceModel.cpp  deviceModel.h  devicesHub.cpp  devicesHub.h  main.cpp  main.qml  qml.qrc  rootController.cpp  rootController.h
src/: device.cpp  device.h  deviceModel.cpp  deviceModel.h  devicesHub.cpp  devicesHub.h  rootController.cpp  rootController.h
